@startuml class_diagram

class User {
    - id: UUID
    - email: String
    - firstName: String
    - lastName: String
    - phoneNumber: String
    - created_at: datetime
    - updated_at: datetime
    - address: Address
    - documentUploadSuccessful: boolean
}
User --> Address

class Address {
    - streetLine: String
    - city: String
    - state: String
    - country: String
}

class NotificationService {
    + send(user: User, data: Map<String, String>, notificationStrategy: NotificationStrategy): void
    - getStrategy(NotificationStrategy strategy): INotificationStrategy
}
NotificationService ..> INotificationStrategy
NotificationService ..> NotificationStrategy

enum NotificationStrategy {
    EMAIL
    SMS
}

interface INotificationStrategy {
    + getStrategy(): NotificationStrategy
    + send(user: User, data: Map<String, String>): void
}
INotificationStrategy <|-- EmailNotificationStrategy
INotificationStrategy <|-- SmsNotificationStrategy

class EmailNotificationStrategy {
    - adapter: IEmailNotificationService
    + getStrategy(): NotificationStrategy
    + send(user: User, data: Map<String, String>): void
}
EmailNotificationStrategy --> IEmailNotificationAdapter

class JavaMailSenderAdapter {
    + send(email: String, subject: String, body: String): void
}
JavaMailSenderAdapter --|> IEmailNotificationAdapter

interface IEmailNotificationAdapter{
    + send(email: String, subject: String, body: String): void
}

class SmsNotificationStrategy {
    - adapter: SmsNotificationService
    + getStrategy(): NotificationStrategy
    + send(user: User, data: Map<String, String>): void
}
SmsNotificationStrategy --> ISmsNotificationService

interface ISmsNotificationService {
    + send(phoneNumber: String, message: String): void
}

class DocumentUploadService {
    - storageService: IStorageService
    + upload(file: MultipartFile, String userId): boolean
}
DocumentUploadService --> IStorageService

interface IStorageService {
    + store(file: File, String dir): boolean
}

class StorageService {
    - adapter: IStorageAdapter
    + store(file: File, String dir): boolean
}
StorageService --> IStorageAdapter
StorageService --|> IStorageService

interface IStorageAdapter {
    + store(file: File, String dir): boolean
}

class CloudinaryAdapter {
    + store(file: File, String dir): boolean
}
CloudinaryAdapter --|> IStorageAdapter


@enduml